fix(ad-hoc): stack domain io phones so input is visible

--- a/spot-client/src/common/css/_meeting-name-entry.scss
+++ b/spot-client/src/common/css/_meeting-name-entry.scss
@@ -24,6 +24,11 @@
 
     .input-with-default-domain {
         display: flex;
+        flex-direction: column;
+
+        @media #{$mq-mobile-l} {
+            flex-direction: row;
+        }
 
         .default-domain {
             /**
